--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -27,8 +27,8 @@
 
 $total_columns: 	12;			// 				//
 $total_width:		100%; 		// px|100% 		// px = fixed, 100% = fluid
-$gutter_width:		1%;			// px|%			// px = fixed, % = fluid
-$container_margin:	1%;			// auto|px|%	//
+$gutter_width:		0;			// px|%			// px = fixed, % = fluid
+$container_margin:	0;			// auto|px|%	//
 
 $class_container:	'container';		//				//
 $class_column:		'col';		//				//
