--- a/sass/base.scss
+++ b/sass/base.scss
@@ -12,6 +12,12 @@ $body-text: black;
 
 .container {
     @include container();
-    background-color: blue;
+    background-color: blue; 
+}
+
+.pages {
+    width: 100%; 
     height: 100vh; 
+    background-color: red; 
+    border: 5px solid white; 
 }
