--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -37,8 +37,15 @@
  */
 /* line 13, ../sass/base.scss */
 .container {
-  width: 98%;
-  margin: 0 1%;
+  width: 100%;
+  margin: 0 0;
   background-color: blue;
+}
+
+/* line 18, ../sass/base.scss */
+.pages {
+  width: 100%;
   height: 100vh;
+  background-color: red;
+  border: 5px solid white;
 }
