--- a/sass/base.scss
+++ b/sass/base.scss
@@ -12,12 +12,31 @@ $body-text: black;
 
 .container {
     @include container();
-    background-color: blue; 
+}
+
+nav {
+    height: 100px; 
+    background-color: red; 
+    display: table;
+    width: 100%; 
+
+    ul {
+        display: table-cell; 
+        vertical-align: middle;
+        text-align: center; 
+        
+        li {
+
+            a {
+                text-decoration: none; 
+                color: $sub-text; 
+            }
+        }
+    }
 }
 
 .pages {
-    width: 100%; 
     height: 100vh; 
-    background-color: red; 
+    background-color: rgba( 150, 200, 250, 0.32 ); 
     border: 5px solid white; 
 }
