--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -39,13 +39,30 @@
 .container {
   width: 100%;
   margin: 0 0;
-  background-color: blue;
 }
 
-/* line 18, ../sass/base.scss */
-.pages {
-  width: 100%;
-  height: 100vh;
+/* line 17, ../sass/base.scss */
+nav {
+  height: 100px;
   background-color: red;
+  display: table;
+  width: 100%;
+}
+/* line 23, ../sass/base.scss */
+nav ul {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+/* line 30, ../sass/base.scss */
+nav ul li a {
+  text-decoration: none;
+  color: white;
+}
+
+/* line 38, ../sass/base.scss */
+.pages {
+  height: 100vh;
+  background-color: rgba(150, 200, 250, 0.32);
   border: 5px solid white;
 }
