--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -35,7 +35,12 @@
 /**
  * Apply to any column to make it the last one of the current row.
  */
-/* line 29, ../sass/base.scss */
+/* line 2, ../sass/_responsive.scss */
+.mobile.portrait nav {
+  background-color: red;
+}
+
+/* line 30, ../sass/base.scss */
 .pages {
   height: 100vh;
   background-repeat: no-repeat;
@@ -46,13 +51,13 @@
   background-size: cover;
 }
 
-/* line 42, ../sass/base.scss */
+/* line 43, ../sass/base.scss */
 .container {
   width: 100%;
   margin: 0 0;
 }
 
-/* line 48, ../sass/base.scss */
+/* line 49, ../sass/base.scss */
 nav {
   height: 100px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -60,39 +65,39 @@ nav {
   width: 100%;
   position: fixed;
 }
-/* line 55, ../sass/base.scss */
+/* line 56, ../sass/base.scss */
 nav ul {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
-/* line 62, ../sass/base.scss */
+/* line 63, ../sass/base.scss */
 nav ul li a {
   text-decoration: none;
   color: white;
 }
 
-/* line 76, ../sass/base.scss */
+/* line 77, ../sass/base.scss */
 .realize {
   background-image: url("../images/realize.jpeg");
 }
 
-/* line 80, ../sass/base.scss */
+/* line 81, ../sass/base.scss */
 .distribution {
   background-image: url("../images/distribution.jpg");
 }
 
-/* line 84, ../sass/base.scss */
+/* line 85, ../sass/base.scss */
 .logistics {
   background-image: url("../images/logistics.jpg");
 }
 
-/* line 88, ../sass/base.scss */
+/* line 89, ../sass/base.scss */
 .grow {
   background-image: url("../images/grow.JPG");
 }
 
-/* line 94, ../sass/base.scss */
+/* line 95, ../sass/base.scss */
 .content {
   display: table;
   width: 100vh;
@@ -100,16 +105,25 @@ nav ul li a {
   margin: 0px auto;
   text-align: center;
 }
-/* line 101, ../sass/base.scss */
+/* line 102, ../sass/base.scss */
 .content .center {
   display: table-cell;
   vertical-align: middle;
   color: white;
 }
-/* line 106, ../sass/base.scss */
+/* line 107, ../sass/base.scss */
 .content .center h1 {
   width: auto;
   margin: 0 auto;
   font-size: 50px;
   text-transform: uppercase;
+}
+
+/* line 118, ../sass/base.scss */
+footer {
+  background-color: #3d7377;
+  height: 50px;
+  text-align: center;
+  color: white;
+  padding-top: 10px;
 }
