--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -35,11 +35,6 @@
 /**
  * Apply to any column to make it the last one of the current row.
  */
-/* line 2, ../sass/_responsive.scss */
-.mobile.portrait nav {
-  background-color: red;
-}
-
 /* line 30, ../sass/base.scss */
 .pages {
   height: 100vh;
@@ -57,47 +52,48 @@
   margin: 0 0;
 }
 
-/* line 49, ../sass/base.scss */
-nav {
+/* line 50, ../sass/base.scss */
+.long-nav {
   height: 100px;
   background-color: rgba(0, 0, 0, 0.3);
   display: table;
   width: 100%;
   position: fixed;
 }
-/* line 56, ../sass/base.scss */
-nav ul {
+/* line 57, ../sass/base.scss */
+.long-nav ul {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+  width: 20%;
 }
-/* line 63, ../sass/base.scss */
-nav ul li a {
+/* line 65, ../sass/base.scss */
+.long-nav ul li a {
   text-decoration: none;
   color: white;
 }
 
-/* line 77, ../sass/base.scss */
+/* line 79, ../sass/base.scss */
 .realize {
   background-image: url("../images/realize.jpeg");
 }
 
-/* line 81, ../sass/base.scss */
+/* line 83, ../sass/base.scss */
 .distribution {
   background-image: url("../images/distribution.jpg");
 }
 
-/* line 85, ../sass/base.scss */
+/* line 87, ../sass/base.scss */
 .logistics {
   background-image: url("../images/logistics.jpg");
 }
 
-/* line 89, ../sass/base.scss */
+/* line 91, ../sass/base.scss */
 .grow {
   background-image: url("../images/grow.JPG");
 }
 
-/* line 95, ../sass/base.scss */
+/* line 97, ../sass/base.scss */
 .content {
   display: table;
   width: 100vh;
@@ -105,13 +101,13 @@ nav ul li a {
   margin: 0px auto;
   text-align: center;
 }
-/* line 102, ../sass/base.scss */
+/* line 104, ../sass/base.scss */
 .content .center {
   display: table-cell;
   vertical-align: middle;
   color: white;
 }
-/* line 107, ../sass/base.scss */
+/* line 109, ../sass/base.scss */
 .content .center h1 {
   width: auto;
   margin: 0 auto;
@@ -119,7 +115,7 @@ nav ul li a {
   text-transform: uppercase;
 }
 
-/* line 118, ../sass/base.scss */
+/* line 120, ../sass/base.scss */
 footer {
   background-color: #3d7377;
   height: 50px;
