--- a/sass/base.scss
+++ b/sass/base.scss
@@ -96,7 +96,7 @@ $body-text: black;
 
 .content {
     display: table;
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     margin: 0px auto;
     text-align: center;
@@ -106,10 +106,10 @@ $body-text: black;
         vertical-align: middle; 
         color: white; 
 
-        h1 {
+        .section-header {
             width: auto;
             margin: 0 auto;
-            font-size: 50px;
+            font-size: 200%;
             text-transform: uppercase;
         }
     }
