--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -57,7 +57,7 @@
   background-color: blue;
 }
 
-/* line 30, ../sass/base.scss */
+/* line 29, ../sass/base.scss */
 .pages {
   height: 100vh;
   background-repeat: no-repeat;
@@ -68,13 +68,30 @@
   background-size: cover;
 }
 
-/* line 43, ../sass/base.scss */
+@font-face {
+  font-family: "Gotham Light";
+  src: url("../fonts/Gotham-Light.otf");
+}
+@font-face {
+  font-family: "Gotham Book";
+  src: url("../fonts/Gotham-Book.otf");
+}
+@font-face {
+  font-family: "Gotham Medium";
+  src: url("../fonts/Gotham-Medium.otf");
+}
+@font-face {
+  font-family: "Gotham Bold";
+  src: url("../fonts/Gotham-Bold.otf");
+}
+/* line 63, ../sass/base.scss */
 .container {
+  font-family: "Gotham Book";
   width: 100%;
   margin: 0 0;
 }
 
-/* line 50, ../sass/base.scss */
+/* line 71, ../sass/base.scss */
 .long-nav {
   height: 100px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -82,40 +99,60 @@
   width: 100%;
   position: fixed;
 }
-/* line 57, ../sass/base.scss */
+/* line 78, ../sass/base.scss */
 .long-nav ul {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
   width: 20%;
 }
-/* line 65, ../sass/base.scss */
+/* line 86, ../sass/base.scss */
 .long-nav ul li a {
   text-decoration: none;
   color: white;
 }
 
-/* line 79, ../sass/base.scss */
+/* line 94, ../sass/base.scss */
+.link > a {
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  padding: 10px 30px;
+  text-transform: uppercase;
+}
+
+/* line 102, ../sass/base.scss */
+.link > a:hover {
+  background-color: white;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+/* line 109, ../sass/base.scss */
+#logo img {
+  width: 70px;
+}
+
+/* line 119, ../sass/base.scss */
 .realize {
   background-image: url("../images/realize.jpeg");
 }
 
-/* line 83, ../sass/base.scss */
+/* line 123, ../sass/base.scss */
 .distribution {
   background-image: url("../images/distribution.jpg");
 }
 
-/* line 87, ../sass/base.scss */
+/* line 127, ../sass/base.scss */
 .logistics {
   background-image: url("../images/logistics.jpg");
 }
 
-/* line 91, ../sass/base.scss */
+/* line 131, ../sass/base.scss */
 .grow {
   background-image: url("../images/grow.JPG");
 }
 
-/* line 97, ../sass/base.scss */
+/* line 137, ../sass/base.scss */
 .content {
   display: table;
   width: 100%;
@@ -123,21 +160,22 @@
   margin: 0px auto;
   text-align: center;
 }
-/* line 104, ../sass/base.scss */
+/* line 144, ../sass/base.scss */
 .content .center {
   display: table-cell;
   vertical-align: middle;
   color: white;
 }
-/* line 109, ../sass/base.scss */
+/* line 149, ../sass/base.scss */
 .content .center .section-header {
+  font-family: "Gotham Medium";
   width: auto;
   margin: 0 auto;
   font-size: 200%;
   text-transform: uppercase;
 }
 
-/* line 120, ../sass/base.scss */
+/* line 161, ../sass/base.scss */
 footer {
   background-color: #3d7377;
   height: 50px;
