--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -11,6 +11,7 @@
 .px-240, 
 .px-320,
 .px-480 {
+
     .long-nav ul:not(#logo) {
         display: none; 
     }
@@ -21,7 +22,7 @@
         padding: 40px 40px 0px 40px;
         margin-bottom: 40px;
     }
-    
+
     .realize .section-header {
         padding: 40px; 
     }
@@ -33,9 +34,39 @@
 
 .px-240, 
 .px-320 {
+
     .section-header {
-        font-size: 150% !important; 
-        background-color: blue; 
+        font-size: 150%; 
+    }
+}
+
+.px-640 {
+
+    .section-header {
+        font-size: 250%; 
+    }
+}
+
+
+.px-720 {
+
+    .section-header {
+        font-size: 300%; 
+    }
+}
+
+
+.px-960 {
+
+    .section-header {
+        font-size: 350%; 
+    }
+}
+
+.px-1280 {
+
+    .section-header {
+        font-size: 400%; 
     }
 }
 
