--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -35,13 +35,7 @@
 /**
  * Apply to any column to make it the last one of the current row.
  */
-/* line 15, ../sass/_responsive.scss */
-.px-240 .long-nav ul:not(#logo),
-.px-320 .long-nav ul:not(#logo),
-.px-480 .long-nav ul:not(#logo) {
-  display: none;
-}
-/* line 19, ../sass/_responsive.scss */
+/* line 12, ../sass/_responsive.scss */
 .px-240 .section-header,
 .px-320 .section-header,
 .px-480 .section-header {
@@ -50,41 +44,57 @@
   padding: 40px 40px 0px 40px;
   margin-bottom: 40px;
 }
-/* line 26, ../sass/_responsive.scss */
-.px-240 .realize .section-header,
-.px-320 .realize .section-header,
-.px-480 .realize .section-header {
-  padding: 40px;
-}
-/* line 30, ../sass/_responsive.scss */
+/* line 19, ../sass/_responsive.scss */
 .px-240 .link > a,
 .px-320 .link > a,
 .px-480 .link > a {
   font-size: 14px;
 }
 
-/* line 38, ../sass/_responsive.scss */
+/* line 29, ../sass/_responsive.scss */
+.px-240 .long-nav ul:not(#logo),
+.px-320 .long-nav ul:not(#logo),
+.px-480 .long-nav ul:not(#logo),
+.px-640 .long-nav ul:not(#logo) {
+  display: none;
+}
+
+/* line 39, ../sass/_responsive.scss */
+.px-240 .mobile-menu ul,
+.px-320 .mobile-menu ul,
+.px-480 .mobile-menu ul,
+.px-640 .mobile-menu ul {
+  display: block;
+}
+
+/* line 46, ../sass/_responsive.scss */
 .px-240 .section-header,
 .px-320 .section-header {
   font-size: 150%;
 }
 
-/* line 45, ../sass/_responsive.scss */
+/* line 52, ../sass/_responsive.scss */
 .px-640 .section-header {
   font-size: 250%;
 }
 
-/* line 53, ../sass/_responsive.scss */
-.px-720 .section-header {
+/* line 60, ../sass/_responsive.scss */
+.px-720 .section-header,
+.px-800 .section-header {
   font-size: 300%;
 }
+/* line 65, ../sass/_responsive.scss */
+.px-720 .long-nav ul li a,
+.px-800 .long-nav ul li a {
+  font-size: 13px;
+}
 
-/* line 61, ../sass/_responsive.scss */
+/* line 73, ../sass/_responsive.scss */
 .px-960 .section-header {
   font-size: 350%;
 }
 
-/* line 68, ../sass/_responsive.scss */
+/* line 79, ../sass/_responsive.scss */
 .px-1280 .section-header {
   font-size: 400%;
 }
@@ -185,7 +195,12 @@
   background-image: url("../images/grow.JPG");
 }
 
-/* line 148, ../sass/base.scss */
+/* line 147, ../sass/base.scss */
+.realize .section-header {
+  padding: 40px;
+}
+
+/* line 152, ../sass/base.scss */
 .content {
   display: table;
   width: 100%;
@@ -193,13 +208,13 @@
   margin: 0px auto;
   text-align: center;
 }
-/* line 155, ../sass/base.scss */
+/* line 159, ../sass/base.scss */
 .content .center {
   display: table-cell;
   vertical-align: middle;
   color: white;
 }
-/* line 160, ../sass/base.scss */
+/* line 164, ../sass/base.scss */
 .content .center .section-header {
   font-family: "Gotham Medium";
   text-shadow: 4px 4px rgba(0, 0, 0, 0.09);
@@ -207,14 +222,14 @@
   margin: 0 auto;
   text-transform: uppercase;
 }
-/* line 168, ../sass/base.scss */
+/* line 172, ../sass/base.scss */
 .content .center .section-sub-header {
   font-family: "Gotham Light";
   margin-bottom: 50px;
   text-shadow: 4px 4px rgba(0, 0, 0, 0.09);
 }
 
-/* line 178, ../sass/base.scss */
+/* line 182, ../sass/base.scss */
 footer {
   background-color: #3d7377;
   height: 50px;
